# bits-python

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.bitsout/preview/: bits-presets.tex  bits-presets__mass-of-the-sun__p-default.tex
.devcontainer/: Dockerfile  devcontainer.json
.github/actions/build-package/: action.yml
.github/actions/bump-version/: action.yml
.github/actions/check-bump/: action.yml
.github/actions/create-bitsrc/: action.yml  create-bitsrc.sh
.github/actions/create-pr/: action.yml
.github/actions/install-package/: action.yml
.github/actions/lint/: action.yml
.github/actions/setup-poetry/: action.yml
.github/actions/setup-python/: action.yml
.github/actions/test/: action.yml
.github/workflows/: bump.yml  ci.yml  create-pr.yml  post-merge-bump-sync.yml
docs/: architecture.md  cli.md  compose.md  concepts.md  config.md  dialects.md  extending.md  guide.md  index.md  merge-policy.md  migration.md  multi-fragments.md  outputs.md  presets.md  preview-and-plugins.md  queries.md  testing.md
scripts/: .gitignore  check-dev-against-main.sh  check-local-against-remote.sh  format.sh  lint.sh
src/bits/: bit.py  block.py  config.py  constant.py  dialects.py  env.py  exceptions.py  filters.py  helpers.py  renderer.py  target.py  watcher.py  yaml_loader.py
src/bits/cli/: helpers.py  main.py
src/bits/collections/: __init__.py  collection.py  element.py
src/bits/config/: config.ini  constants.yml
src/bits/models/: __init__.py  bit_model.py  bits_query_model.py  blocks_model.py  constant_model.py  constants_model.py  constants_query_model.py  registry_model.py  target_model.py
src/bits/registry/: __init__.py  registry.py  registry_factory.py  registryfile.py  registryfile_dumpers.py  registryfile_parsers.py  registryfolder.py  registrymdfile.py  registryyamlfile.py
tests/: conftest.py
tests/e2e/: test_cli.py  test_preview.py  test_watch_error_handling.py
tests/resources/: .bitsrc  bits-presets-merge-policy.yaml  bits-presets-overrides.yaml  bits-presets-string-index.yaml  bits-presets.yaml  bitsfile.md  bitsfile1.md  bitsfile2.md  bitsfile3.md  bitsfile4.md  bitsfile5.md  collection.md  collection.yml  compose-dedupe.yaml  constants-has.yaml  constants-local-query.md  constants-remote-query.md  constants.yml  default-fragment.yaml  folder-query-md.md  import.yml  index.yml  local-query-md.md  local-query-yaml.yaml  local-recursive-query-md.md  local-recursive-query-yaml.yaml  local-recursive-query.md  merge-precedence.yaml  minimal-pdf.yaml  profiles.yml  queries-compose-yaml.yaml  queries-where-select-compose.yaml  remote-query-md.md  remote-query-yaml.yaml  remote-query.md  remote-recursive-query-md.md  remote-recursive-query-yaml.yaml  remote-recursive-query.md  select-sample.yaml  targets-extends-merge-policy.yaml  (+5 more)
tests/resources/folder-with-index/: index.md  index.yml
tests/resources/invalid/: bits-presets-bad-override.yaml  invalid-with.yaml  preset-out-of-range.yaml  targets-extends-bad-override.yaml  targets-extends-cycle.yaml  targets-extends-missing.yaml
tests/resources/plugins/: auto_filters.py  auto_filters_for_macros.py  auto_filters_suffix.py  default_filters.py  math_filters.py  override_filters.py
tests/resources/templates/: base.tex.j2  commands.tex.j2  fancyhdr.tex.j2  geometry.tex.j2  grid.tex.j2  macros_auto.tex.j2  meta.tex.j2  (+11 more)
tests/unit/: test_bit.py  test_bits_presets.py  test_block_render_overrides.py  test_compose_dedupe.py  test_config_toml.py  test_constants_where_has.py  test_dialects.py  test_error_handling.py  test_jinja_auto_filters_macros.py  test_jinja_plugins.py  test_jinja_plugins_parsing.py  test_jinja_syntax_config.py  test_merge_policy_and_overrides.py  test_merge_precedence.py  test_multi_fragment_bits.py  test_output_management.py  test_parse_dump.py  test_preset_index_errors.py  test_presets_bad_override.py  test_presets_string_index.py  test_queries_compose.py  test_registry_factory.py  test_registryfile.py  test_renderer.py  test_select_sample.py  test_target_extends.py  test_target_outputs.py  test_target_remove.py  test_watch_for_changes.py  test_where_select_compose.py  test_with_queries.py  test_with_validation.py
(+6 files in other folders)
